feat: modify npm

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Icons 的主页</title>
   </head>
   <body>
-    <a href="./packages/icons-react/doc/index.html">icons-react</a>
-    <a href="./packages/icons-vue/examples/all-icons.jsx">icons-vue</a>
+    <a href="./packages/icons-react/doc/">icons-react</a>
+    <a href="./packages/icons-vue/examples/all-icons">icons-vue</a>
   </body>
 </html>
