docs: 文档添加taro使用方法

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <title>Icons 的主页</title>
   </head>
   <body>
-    <a href="./packages/icons-react/doc/">icons-react</a>
-    <a href="./packages/icons-vue/examples/all-icons">icons-vue</a>
+    <a href="./packages/icons-react/doc/">use icons</a>
   </body>
 </html>
